--- a/index.html
+++ b/index.html
@@ -4,8 +4,59 @@
     <meta charset="UTF-8">
     <title>Jewels By The Sea</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <a class="btn">Home</a>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="col-md-10 col-md-offset-1">
+            <div class="row category">
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 1
+                </div>
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 2
+                </div>
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 3
+                </div>
+            </div>
+            <div class="row category">
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 4
+                </div>
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 5
+                </div>
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 6
+                </div>
+            </div>
+            <div class="row category">
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 7
+                </div>
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 8
+                </div>
+                <div class="col-md-4">
+                    <img src="http://placehold.it/250x250">
+                    Category 9
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
