Rest of the skeleton pages, basic header/footer look

--- a/faq.html
+++ b/faq.html
@@ -31,11 +31,11 @@
   <div class="nav">
     <div class="navlinks">
       <img class="header-img" src="images/logo.png" />
-      <a href="#" class="item">Home</a>
-      <a href="about.html" class="active item">About</a>
+      <a href="index.html" class="item">Home</a>
+      <a href="about.html" class="item">About</a>
       <a href="visit.html" class="item">Visit&nbsp;Us</a>
       <a href="#" class="item">Products</a>
-      <a href="faq.html" class="item">FAQ</a>
+      <a href="faq.html" class="active item">FAQ</a>
     </div>
   </div>
 
@@ -43,14 +43,16 @@
   <!-- Main Content -->
   <div class="ui main container">
     
-    <img class="ui image" src="http://placehold.it/600x200" />
-
-    <p>Hi! My name is Linda Ronelle Jalving, and the unique boutique "Jewels by the Sea" is a result of my mid-life growth spurt (which started out as a crisis, but has been amended:).</p>
-
-    <p>My boutique specializes in an eclectic mix of unique jewelry including local artists, estate, vintage, colored gems, diamond, gold, silver, copper and fashion jewelry. You'll also discover scarves, ornaments, and gifts with prices ranging from $5.00 to $5,000.00.</p>
-
-    <p>I am a Graduate Gemologist with the Gemological Institute of America, and jewelry has been a passion for me since I was a little girl. Every special piece of wearable art in my shop was hand picked with loving care, and I truly enjoy sharing my knowledge and passion for beautiful jewelry of all kinds. I would like to extend a personal invitation for you to visit me at Jewels by the Sea - where I hope to enchant and delight you!</p>
-    
+    <h3 class="script">Frequently Asked Questions</h3>
+  
+    <div class="ui segments">
+      <div class="ui segment">
+        <p>Does Jewels By The Sea create custom jewelry?</p>
+      </div>
+      <div class="ui secondary segment">
+        <p>Yes &mdash; with my Graduate Jeweler status and over 3 years in the jewelry business, I LOVE to help people create that unique and wonderful piece of jewelry just for you. I have custom designed wedding sets, right hand rings, pendants, bracelets, earrings, and fasion jewelry for many of my clients throughout the years. It gives me great joy to help you create a unique piece of jewelry that will become an heirloom for generations to come.</p>
+      </div>
+    </div>
 
   </div>
 
