--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,4 @@
-<html lang="en" >
+<html lang="en" ng-app="">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
   <script src="semantic/dist/semantic.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <title>Jewels By The Sea</title>
 
@@ -28,16 +30,7 @@
 
 <body>
 
-  <div class="nav">
-    <div class="navlinks">
-      <img class="header-img" src="images/logo.png" />
-      <a href="index.html" class="item">Home</a>
-      <a href="about.html" class="item">About</a>
-      <a href="visit.html" class="item">Visit&nbsp;Us</a>
-      <a href="#" class="item">Products</a>
-      <a href="faq.html" class="active item">FAQ</a>
-    </div>
-  </div>
+  <ng-include src="'partials/nav.html'"></ng-include>
 
 
   <!-- Main Content -->
