changing nav class

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
-  <ng-include src="'partials/nav.html'"></ng-include>
+  <div class="nav"ng-include src="'partials/nav.html'"></div>
 
   <!-- Main Content -->
   <div class="ui main container">
