--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="column">
             <div class="ui card">
               <div class="image">
-                <img src="http://placehold.it/200x200">
+                <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
                 <a class="header" href="categories/estatevintage.html">ESTATE & VINTAGE</a>
@@ -67,7 +67,7 @@
           <div class="column">
             <div class="ui card">
               <div class="image">
-                <img src="http://placehold.it/200x200">
+                <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
                 <a class="header" href="categories/local.html">LOCAL ARTISTS</a>
@@ -78,7 +78,7 @@
           <div class="column">
             <div class="ui card">
               <div class="image">
-                <img src="http://placehold.it/200x200">
+                <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
                 <a class="header" href="categories/worldwide.html">WORLDWIDE ARTISTS</a>
@@ -89,7 +89,7 @@
           <div class="column">
             <div class="ui card">
               <div class="image">
-                <img src="http://placehold.it/200x200">
+                <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
                 <a class="header" href="categories/earrings.html">EARRINGS</a>
@@ -112,7 +112,7 @@
           <div class="column">
             <div class="ui card">
               <div class="image">
-                <img src="http://placehold.it/200x200">
+                <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
                 <a class="header" href="categories/bracelets.html">BRACELETS</a>
@@ -124,7 +124,7 @@
           <div class="column">
             <div class="ui card">
               <div class="image">
-                <img src="http://placehold.it/200x200">
+                <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
                 <a class="header" href="categories/scarves.html">SCARVES</a>
@@ -135,7 +135,7 @@
           <div class="column">
             <div class="ui card">
               <div class="image">
-                <img src="http://placehold.it/200x200">
+                <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
                 <a class="header" href="categories/necklaces.html">NECKLACES & PENDANTS</a>
@@ -146,7 +146,7 @@
           <div class="column">
             <div class="ui card">
               <div class="ui image">
-                <img src="http://placehold.it/200x200">
+                <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
                 <a class="header" href="categories/deals.html">DEALS</a>
