Fixed active links on navbar

--- a/estatevintage.html
+++ b/estatevintage.html
@@ -31,16 +31,7 @@
 
 <body>
 
-  <div class="nav">
-    <div class="navlinks">
-      <img class="header-img" src="images/logo.png" />
-      <a href="#" class="item">Home</a>
-      <a href="about.html" class="item">About</a>
-      <a href="visit.html" class="item">Visit&nbsp;Us</a>
-      <a href="index.html#products" class="active item">Products</a>
-      <a href="faq.html" class="item">FAQ</a>
-    </div>
-  </div>
+  <div class="nav" ng-include src="'partials/nav.html'"></div>
 
   <!-- Main Content -->
   <div class="ui main container">
