--- a/faq.html
+++ b/faq.html
@@ -30,8 +30,18 @@
 
 <body>
 
-  <ng-include src="'partials/nav.html'"></ng-include>
-
+  <div class="nav">
+    <div class="navlinks">
+      <a href="/"><img class="header-img" src="images/logo.png" /></a>
+      <div class="nav-container">
+        <a href="index.html" class="item navlink">Home</a>
+        <a href="about.html" class="item navlink">About</a>
+        <a href="visit.html" class="item navlink">Visit&nbsp;Us</a>
+        <a href="index.html#products" class="item navlink">Products</a>
+        <a href="faq.html" class="active item navlink">FAQ</a>
+      </div>
+    </div>
+  </div>
 
   <!-- Main Content -->
   <div class="ui main container">
@@ -44,6 +54,24 @@
       </div>
       <div class="ui secondary segment">
         <p>Yes &mdash; with my Graduate Jeweler status and over 3 years in the jewelry business, I LOVE to help people create that unique and wonderful piece of jewelry just for you. I have custom designed wedding sets, right hand rings, pendants, bracelets, earrings, and fasion jewelry for many of my clients throughout the years. It gives me great joy to help you create a unique piece of jewelry that will become an heirloom for generations to come.</p>
+      </div>
+    </div>
+
+    <div class="ui segments">
+      <div class="ui segment">
+        <p>What is a Graduate Gemologist?</p>
+      </div>
+      <div class="ui secondary segment">
+        <p>GIA, or the Gemological Institute of America, is the training authority in the American jewelry industry. To earn a Graduate Gemologist degree from the GIA, you must invest a substantial amount of time and money to complete and pass five course studies and three lab classes, and then pass a comprehensive final exam. Following are the 8 requirements: Diamond Essentials, Diamonds and Diamond Grading, Colored Stone Essentials, Colored Stones, Gem Identification, and Lab Classes: Diamond Grading Lab, Colored Stone Grading Lab, Gem Identification Lab. The most prestigious credential in the industry, the GIA Graduate Gemologist program gives a person the compregensive knowledge of diamonds and colored stones one needs to succeed anywhere in the industry.</p>
+      </div>
+    </div>
+
+    <div class="ui segments">
+      <div class="ui segment">
+        <p>Where does your jewelry come from?</p>
+      </div>
+      <div class="ui secondary segment">
+        <p>I hand pick every item in the store. I choose pieces from local artists, from artists from around the world, and from estate and vintage sales. Whenever I travel, I find artists from the area I am visiting and set up appointments to assess the possibility of adding another unique line to my inventory. Jewels By The Sea has jewelry from dozens of countries as well as La Jolla and San Diego artists. I also have a wide variety of price points ($5.00 - $5,000.) and a variety of styles to appeal to every client (at least that's my goal!)</p>
       </div>
     </div>
 
