--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
-  <div class="nav"ng-include src="'partials/nav.html'"></div>
+  <div class="nav">
+    <div class="navlinks">
+      <a href="/"><img class="header-img" src="images/logo.png" /></a>
+      <div class="nav-container">
+        <a href="index.html" class="active item navlink">Home</a>
+        <a href="about.html" class="item navlink">About</a>
+        <a href="visit.html" class="item navlink">Visit&nbsp;Us</a>
+        <a href="index.html#products" class="item navlink">Products</a>
+        <a href="faq.html" class="item navlink">FAQ</a>
+      </div>
+    </div>
+  </div>
+
 
   <!-- Main Content -->
   <div class="ui main container">
@@ -59,7 +71,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/estatevintage.html">ESTATE & VINTAGE</a>
+                <a class="header" href="estatevintage.html">ESTATE & VINTAGE</a>
               </div>
             </div>
           </div>
@@ -70,7 +82,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/local.html">LOCAL ARTISTS</a>
+                <a class="header" href="local.html">LOCAL ARTISTS</a>
               </div>
             </div>
           </div>
@@ -81,7 +93,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/worldwide.html">WORLDWIDE ARTISTS</a>
+                <a class="header" href="worldwide.html">WORLDWIDE ARTISTS</a>
               </div>
             </div>
           </div>
@@ -92,7 +104,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/earrings.html">EARRINGS</a>
+                <a class="header" href="earrings.html">EARRINGS</a>
               </div>
             </div>
           </div>
@@ -104,7 +116,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/favorites.html">LINDA'S FAVORITES</a>
+                <a class="header" href="favorites.html">LINDA'S FAVORITES</a>
               </div>
             </div>
           </div>
@@ -115,7 +127,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/bracelets.html">BRACELETS</a>
+                <a class="header" href="bracelets.html">BRACELETS</a>
               </div>
             </div>
           </div>
@@ -127,7 +139,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/scarves.html">SCARVES</a>
+                <a class="header" href="scarves.html">SCARVES</a>
               </div>
             </div>
           </div>
@@ -138,7 +150,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/necklaces.html">NECKLACES & PENDANTS</a>
+                <a class="header" href="necklaces.html">NECKLACES & PENDANTS</a>
               </div>
             </div>
           </div>
@@ -149,7 +161,7 @@
                 <img src="images/favorites/1-thumb.png">
               </div>
               <div class="content">
-                <a class="header" href="categories/deals.html">DEALS</a>
+                <a class="header" href="deals.html">DEALS</a>
               </div>
             </div>
           </div>
@@ -172,14 +184,16 @@
           </div>
         </div>
 
-        <p><a href="#">Graduate gemologist</a>, expert <a href="#FAQLINK">jewelry repair</a>, exceptional customer service.</p>
+        <div class="ui basic center aligned segment">
+          <a href="about.html">Graduate gemologist</a>, expert <a href="faq.html">jewelry repair</a>, exceptional customer service.
+        </div>
 
         <div class="ui basic center aligned segment">
           <div class="fb-page" data-href="https://www.facebook.com/Jewels-by-The-Sea-122293291160690/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"></div>
         </div>
 
         <div class="ui basic center aligned segment">
-            <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-5x"></i></a> &nbsp;<a href=""><i class="fa fa-facebook-square fa-5x"></i></a> &nbsp;<a href=""><i class="fa fa-send fa-5x"></i></a>
+            <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-5x"></i></a> &nbsp;<a href=""><i class="fa fa-facebook-square fa-5x"></i></a> &nbsp;<a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-send fa-5x"></i></a>
         </div>
       </div>
     </div>
