--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+<script src="classie.js"></script>
+<script>
+    function init() {
+        window.addEventListener('scroll', function(e){
+            var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+                shrinkOn = 250,
+                header = document.querySelector("header");
+            if (distanceY > shrinkOn) {
+                classie.add(header,"smaller");
+            } else {
+                if (classie.has(header,"smaller")) {
+                    classie.remove(header,"smaller");
+                }
+            }
+        });
+    }
+    window.onload = init();
+</script>
+
+
 </head>
 <title>Jewels By The Sea</title>
 
@@ -42,19 +63,18 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
-  <div class="nav">
+  <header>
     <div class="navlinks">
-      <a href="/"><img class="header-img" src="images/logo.png" /></a>
+      <div id="logo"><a href="/"><img class="header-img" src="images/logo.png" /></a></div>
       <div class="nav-container">
-        <a href="index.html" class="active item navlink">Home</a>
-        <a href="about.html" class="item navlink">About</a>
+        <a href="index.html" class="item navlink">Home</a>
+        <a href="about.html" class="active item navlink">About</a>
         <a href="visit.html" class="item navlink">Visit&nbsp;Us</a>
         <a href="index.html#products" class="item navlink">Products</a>
         <a href="faq.html" class="item navlink">FAQ</a>
       </div>
     </div>
-  </div>
-
+  </header>
 
   <!-- Main Content -->
   <div class="ui main container">
