--- a/index.html
+++ b/index.html
@@ -3,56 +3,34 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-<script src="classie.js"></script>
-<script>
-    function init() {
-        window.addEventListener('scroll', function(e){
-            var distanceY = window.pageYOffset || document.documentElement.scrollTop,
-                shrinkOn = 250,
-                header = document.querySelector("header");
-            if (distanceY > shrinkOn) {
-                classie.add(header,"smaller");
-            } else {
-                if (classie.has(header,"smaller")) {
-                    classie.remove(header,"smaller");
-                }
-            }
-        });
-    }
-    window.onload = init();
-
-
-
-</script>
-
-
-</head>
-<title>Jewels By The Sea</title>
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/card.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/modal.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/sidebar.min.css">
+  <link rel='stylesheet' href='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.css'>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" type-"text/css" href="styles.css">
+
+  <title>Jewels By The Sea</title>
+
+  <script src="classie.js"></script>
+  <script>
+      function init() {
+          window.addEventListener('scroll', function(e){
+              var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+                  shrinkOn = 250,
+                  header = document.querySelector("header");
+              if (distanceY > shrinkOn) {
+                  classie.add(header,"smaller");
+              } else {
+                  if (classie.has(header,"smaller")) {
+                      classie.remove(header,"smaller");
+                  }
+              }
+          });
+      }
+      window.onload = init();
+  </script>
+</head>
 
 <body>
 
@@ -67,13 +45,12 @@
     }(document, 'script', 'facebook-jssdk'));
 
 
-        $('#show-sidebar').click(function() {
-  $('.ui.sidebar')
-    .sidebar('setting', 'transition', 'overlay')
-    .sidebar('toggle')
-    .sidebar('attach events', '.ui.sidebar', 'show')
-  ;
-});
+    $('#show-sidebar').click(function() {
+      $('.ui.sidebar')
+        .sidebar('setting', 'transition', 'overlay')
+        .sidebar('toggle')
+        .sidebar('attach events', '.ui.sidebar', 'show');
+    });
   </script>
 <!--
   <header>
@@ -95,23 +72,28 @@
       <i class="sidebar icon"></i>
     </div>
   </div>
-  <a class="item">
-    Item 1
+  <a class="active item" href="index.html">
+    Home
   </a>
-  <a class="item">
-    Item 2
+  <a class="item" href="about.html">
+    About
   </a>
-  <a class="item">
-    Item 3
+  <a class="item" href="visit.html">
+    Visit Us
+  </a>
+  <a class="item" href="index.html#products">
+    Products
+  </a>
+  <a class="item" href="faq.html">
+    FAQ
   </a>
 </div>
 
 
 <header>
   <div id="show-sidebar" class="button toggler" style="color:white;">
-        <i class="sidebar icon"></i>
-        Sidebar
-      </div> 
+    MENU
+  </div> 
 </header>
 
 
@@ -123,7 +105,7 @@
     <div class="ui grid">
       <div class="eleven wide column border-right">
 
-        <div class="ui three column grid center aligned">
+        <div class="ui two column grid center aligned">
           <!-- Row 1 -->
           <div class="column">
             <div class="ui card">
@@ -262,6 +244,21 @@
   </div>
 
   <ng-include src="'partials/footer.html'"></ng-include>
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
+ <script>
+         $(function() {
+    $('#show-sidebar').click(function() {
+      $('.menu.sidebar').sidebar('toggle');
+    });
+
+    $('#hide-sidebar').click(function() {
+      $('.menu.sidebar').sidebar('toggle');
+    });
+  });
+         </script>
+
 </div>
 
 </body>
