Navbar for index

--- a/index.html
+++ b/index.html
@@ -91,9 +91,12 @@
 
 
 <header>
-  <div id="show-sidebar" class="button toggler" style="color:white;">
+  <div id="show-sidebar" class="button toggler">
     MENU
   </div> 
+  <div id="logo">
+    <img src="images/logo.png" />
+  </div>
 </header>
 
 
