--- a/about.html
+++ b/about.html
@@ -3,54 +3,104 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <link rel='stylesheet' href='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.css'>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" type-"text/css" href="styles.css">
+
+  <title>Jewels By The Sea</title>
+
+  <script src="classie.js"></script>
+  <script>
+      function init() {
+          window.addEventListener('scroll', function(e){
+              var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+                  shrinkOn = 250,
+                  header = document.querySelector("header");
+              if (distanceY > shrinkOn) {
+                  classie.add(header,"smaller");
+              } else {
+                  if (classie.has(header,"smaller")) {
+                      classie.remove(header,"smaller");
+                  }
+              }
+          });
+      }
+      window.onload = init();
+  </script>
 </head>
-<title>Jewels By The Sea</title>
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
-  <link rel="stylesheet" href="styles.css">
 
 <body>
 
-  <div class="nav">
+  <script>
+    $('#show-sidebar').click(function() {
+      $('.ui.sidebar')
+        .sidebar('setting', 'transition', 'overlay')
+        .sidebar('toggle')
+        .sidebar('attach events', '.ui.sidebar', 'show');
+    });
+  </script>
+<!--
+  <header>
     <div class="navlinks">
-      <a href="/"><img class="header-img" src="images/logo.png" /></a>
+      <div id="logo"><a href="/"><img class="header-img" src="images/logo.png" /></a></div>
       <div class="nav-container">
         <a href="index.html" class="item navlink">Home</a>
         <a href="about.html" class="active item navlink">About</a>
-        <a href="visit.html" class="item navlink">Visit&nbsp;Us</a>
+        <a href="visit.html" class="item navlink">Visit</a>
         <a href="index.html#products" class="item navlink">Products</a>
         <a href="faq.html" class="item navlink">FAQ</a>
       </div>
     </div>
+  </header>
+-->
+<div class="ui left inverted vertical menu sidebar">
+  <div class="item">
+    <div id="hide-sidebar" class="button">
+      <i class="sidebar icon"></i>
+    </div>
   </div>
+  <a class="item" href="index.html">
+    Home
+  </a>
+  <a class="active item" href="about.html">
+    About
+  </a>
+  <a class="item" href="visit.html">
+    Visit Us
+  </a>
+  <a class="item" href="index.html#products">
+    Products
+  </a>
+  <a class="item" href="faq.html">
+    FAQ
+  </a>
+</div>
+
+
+<header>
+  <div id="show-sidebar" class="button toggler">
+    MENU
+  </div> 
+  <div id="logo">
+    <img src="images/logo.png" />
+  </div>
+</header>
+
+
+<div class="pusher">
 
   <!-- Main Content -->
   <div class="ui main container">
     
     <div class="ui basic center aligned segment">
-      <img class="ui image" src="http://placehold.it/600x200" />
+      <img class="ui image center aligned" src="images/about.jpg" />
     </div>
-    
+
     <div class="ui basic left aligned segment">
-      <p>Hi! My name is Linda Ronelle Jalving, and the unique boutique "Jewels by the Sea" is a result of my mid-life growth spurt (which started out as a crisis, but has been amended:).</p>
+      <p>Hi! My name is Linda Ronelle Jalving, and the unique boutique "Jewels by the Sea" is a result of my mid-life growth spurt (which started out as a crisis, but has been amended. :) ) .</p>
 
       <p>My boutique specializes in an eclectic mix of unique jewelry including local artists, estate, vintage, colored gems, diamond, gold, silver, copper and fashion jewelry. You'll also discover scarves, ornaments, and gifts with prices ranging from $5.00 to $5,000.00.</p>
 
@@ -62,7 +112,20 @@
 
 
   <ng-include src="'partials/footer.html'"></ng-include>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
+  <script>
+    $(function() {
+      $('#show-sidebar').click(function() {
+        $('.menu.sidebar').sidebar('toggle');
+      });
 
-<script type='text/javascript' src='app.js'></script>
+      $('#hide-sidebar').click(function() {
+        $('.menu.sidebar').sidebar('toggle');
+      });
+    });
+  </script>
+
+
 </body>
 </html>
