--- a/estatevintage.html
+++ b/estatevintage.html
@@ -3,36 +3,81 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-</head>
-<title>Jewels By The Sea</title>
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/card.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/modal.css">
+  <link rel='stylesheet' href='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.css'>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   <link rel="stylesheet" type-"text/css" href="styles.css">
+
+  <title>Jewels By The Sea</title>
+
+  <script src="classie.js"></script>
+  <script>
+      function init() {
+          window.addEventListener('scroll', function(e){
+              var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+                  shrinkOn = 250,
+                  header = document.querySelector("header");
+              if (distanceY > shrinkOn) {
+                  classie.add(header,"smaller");
+              } else {
+                  if (classie.has(header,"smaller")) {
+                      classie.remove(header,"smaller");
+                  }
+              }
+          });
+      }
+      window.onload = init();
+  </script>
+</head>
 
 <body>
 
-  <div class="nav" ng-include src="'partials/nav.html'"></div>
+  <script>
+    $('#show-sidebar').click(function() {
+      $('.ui.sidebar')
+        .sidebar('setting', 'transition', 'overlay')
+        .sidebar('toggle')
+        .sidebar('attach events', '.ui.sidebar', 'show');
+    });
+  </script>
 
+<div class="ui left inverted vertical menu sidebar">
+  <div class="item">
+    <div id="hide-sidebar" class="button">
+      <i class="sidebar icon"></i>
+    </div>
+  </div>
+  <a class="item" href="index.html">
+    Home
+  </a>
+  <a class="item" href="about.html">
+    About
+  </a>
+  <a class="item" href="visit.html">
+    Visit Us
+  </a>
+  <a class="active item" href="index.html#products">
+    Products
+  </a>
+  <a class="item" href="faq.html">
+    FAQ
+  </a>
+</div>
+
+
+<header>
+  <div id="show-sidebar" class="button toggler">
+    MENU
+  </div> 
+  <div id="logo">
+    <img src="images/logo.png" />
+  </div>
+</header>
+
+
+<div class="pusher">
   <!-- Main Content -->
   <div class="ui main container">
     <h1 class="script">Estate & Vintage</h1> 
