--- a/faq.html
+++ b/faq.html
@@ -3,46 +3,81 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <link rel='stylesheet' href='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.css'>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" type-"text/css" href="styles.css">
+
+  <title>Jewels By The Sea</title>
+
+  <script src="classie.js"></script>
+  <script>
+      function init() {
+          window.addEventListener('scroll', function(e){
+              var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+                  shrinkOn = 250,
+                  header = document.querySelector("header");
+              if (distanceY > shrinkOn) {
+                  classie.add(header,"smaller");
+              } else {
+                  if (classie.has(header,"smaller")) {
+                      classie.remove(header,"smaller");
+                  }
+              }
+          });
+      }
+      window.onload = init();
+  </script>
 </head>
-<title>Jewels By The Sea</title>
-
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
-  <link rel="stylesheet" href="styles.css">
 
 <body>
 
-  <div class="nav">
-    <div class="navlinks">
-      <a href="/"><img class="header-img" src="images/logo.png" /></a>
-      <div class="nav-container">
-        <a href="index.html" class="item navlink">Home</a>
-        <a href="about.html" class="item navlink">About</a>
-        <a href="visit.html" class="item navlink">Visit&nbsp;Us</a>
-        <a href="index.html#products" class="item navlink">Products</a>
-        <a href="faq.html" class="active item navlink">FAQ</a>
-      </div>
+  <script>
+    $('#show-sidebar').click(function() {
+      $('.ui.sidebar')
+        .sidebar('setting', 'transition', 'overlay')
+        .sidebar('toggle')
+        .sidebar('attach events', '.ui.sidebar', 'show');
+    });
+  </script>
+
+<div class="ui left inverted vertical menu sidebar">
+  <div class="item">
+    <div id="hide-sidebar" class="button">
+      <i class="sidebar icon"></i>
     </div>
   </div>
+  <a class="item" href="index.html">
+    Home
+  </a>
+  <a class="item" href="about.html">
+    About
+  </a>
+  <a class="item" href="visit.html">
+    Visit Us
+  </a>
+  <a class="item" href="index.html#products">
+    Products
+  </a>
+  <a class="active item" href="faq.html">
+    FAQ
+  </a>
+</div>
 
+
+<header>
+  <div id="show-sidebar" class="button toggler">
+    MENU
+  </div> 
+  <div id="logo">
+    <img src="images/logo.png" />
+  </div>
+</header>
+
+
+<div class="pusher">
   <!-- Main Content -->
   <div class="ui main container">
     
@@ -78,6 +113,20 @@
   </div>
 
   <ng-include src="'partials/footer.html'"></ng-include>
+
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
+  <script>
+    $(function() {
+      $('#show-sidebar').click(function() {
+        $('.menu.sidebar').sidebar('toggle');
+      });
+
+      $('#hide-sidebar').click(function() {
+        $('.menu.sidebar').sidebar('toggle');
+      });
+    });
+  </script>
 
 </body>
 </html>
