--- a/visit.html
+++ b/visit.html
@@ -3,49 +3,86 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <link rel='stylesheet' href='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.css'>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+  <link rel="stylesheet" type-"text/css" href="styles.css">
+
+  <title>Jewels By The Sea</title>
+
+  <script src="classie.js"></script>
+  <script>
+      function init() {
+          window.addEventListener('scroll', function(e){
+              var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+                  shrinkOn = 250,
+                  header = document.querySelector("header");
+              if (distanceY > shrinkOn) {
+                  classie.add(header,"smaller");
+              } else {
+                  if (classie.has(header,"smaller")) {
+                      classie.remove(header,"smaller");
+                  }
+              }
+          });
+      }
+      window.onload = init();
+  </script>
 </head>
-<title>Jewels By The Sea</title>
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
-
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
-  <link rel="stylesheet" href="styles.css">
 
 <body>
 
-  <div class="nav">
-    <div class="navlinks">
-      <a href="/"><img class="header-img" src="images/logo.png" /></a>
-      <div class="nav-container">
-        <a href="index.html" class="item navlink">Home</a>
-        <a href="about.html" class="item navlink">About</a>
-        <a href="visit.html" class="active item navlink">Visit&nbsp;Us</a>
-        <a href="index.html#products" class="item navlink">Products</a>
-        <a href="faq.html" class="item navlink">FAQ</a>
-      </div>
+  <script>
+    $('#show-sidebar').click(function() {
+      $('.ui.sidebar')
+        .sidebar('setting', 'transition', 'overlay')
+        .sidebar('toggle')
+        .sidebar('attach events', '.ui.sidebar', 'show');
+    });
+  </script>
+
+<div class="ui left inverted vertical menu sidebar">
+  <div class="item">
+    <div id="hide-sidebar" class="button">
+      <i class="sidebar icon"></i>
     </div>
   </div>
+  <a class="item" href="index.html">
+    Home
+  </a>
+  <a class="item" href="about.html">
+    About
+  </a>
+  <a class="active item" href="visit.html">
+    Visit Us
+  </a>
+  <a class="item" href="index.html#products">
+    Products
+  </a>
+  <a class="item" href="faq.html">
+    FAQ
+  </a>
+</div>
+
+
+<header>
+  <div id="show-sidebar" class="button toggler">
+    MENU
+  </div> 
+  <div id="logo">
+    <img src="images/logo.png" />
+  </div>
+</header>
+
+
+<div class="pusher">
 
   <!-- Main Content -->
   <div class="ui main container">
     
-    <div class="ui grid">
+    <div class="ui stackable grid">
       <div class="six wide column">
         <div class="google-map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3351.857526300825!2d-117.27394304909458!3d32.8490237875237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc03fc4350450f%3A0x41b23c731ac358f4!2sJewels+By+the+Sea!5e0!3m2!1sen!2sus!4v1456196866978"  width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -69,8 +106,9 @@
           </div>
         </div>
 
-        <p>I am in the store later than 6pm on most nights, and I am happy to set up an appointment with you at any mutually agreeable time - just give call!</p>
-
+        <div class="ui basic segment">
+          <p>I am in the store later than 6pm on most nights, and I am happy to set up an appointment with you at any mutually agreeable time - just give call!</p>
+        </div>
       </div>
       
 
@@ -80,6 +118,20 @@
   </div>
 
   <ng-include src="'partials/footer.html'"></ng-include>
+
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
+  <script>
+    $(function() {
+      $('#show-sidebar').click(function() {
+        $('.menu.sidebar').sidebar('toggle');
+      });
+
+      $('#hide-sidebar').click(function() {
+        $('.menu.sidebar').sidebar('toggle');
+      });
+    });
+  </script>
 
 </body>
 </html>
