--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
           <!-- Row 1 -->
           <div class="column">
             <div class="ui card">
-              <div class="image">
+              <a class="image" href="estatevintage.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
-              <div class="content">
-                <a class="header" href="estatevintage.html">ESTATE & VINTAGE</a>
+              </a>
+              <div class="content item-main">
+                <a class="header" href="estatevintage.html">Estate & Vintage</a>
               </div>
             </div>
           </div>
