Finished rest of the category pages

--- a/estatevintage.html
+++ b/estatevintage.html
@@ -99,21 +99,21 @@
 
       <div class="five wide column">
         <div class="ui list">
-          <a class="active item">Estate & Vintage</a>
-          <a class="item">Local Artists</a>
-          <a class="item">Worldwide Artists</a>
-          <a class="item">Bracelets</a>
-          <a class="item">Scarves</a>
-          <a class="item">Necklaces & Pendants</a>
-          <a class="item">Linda's Favorites</a>
-          <a class="item">Deals</a>
+          <a class="item" href="estatevintage.html">&nbsp;&nbsp;<b>Estate & Vintage</b></a>
+          <a class="item" href="local.html">Local Artists</a>
+          <a class="item" href="worldwide.html">Worldwide Artists</a>
+          <a class="item" href="bracelets.html">Bracelets</a>
+          <a class="item" href="scarves.html">Scarves</a>
+          <a class="item" href="necklaces.html">Necklaces & Pendants</a>
+          <a class="item" href="favorites.html">Linda's Favorites</a>
+          <a class="item" href="deals.html">Deals</a>
         </div>
 
         <div class="ui simple fluid dropdown">
           <div class="text">REFINE</div>
           <i class="dropdown icon"></i>
           <div class="menu">
-            <div class="active item">Newest</div>
+            <div class="active item">Newest&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
             <div class="item">Name</div>
             <div class="item">Price</div>
           </div>
