--- a/index.html
+++ b/index.html
@@ -116,40 +116,40 @@
                 <img src="images/favorites/1-thumb.png">
               </a>
               <div class="content item-main">
-                <a class="header" href="estatevintage.html">Estate & Vintage</a>
+                <a class="header item-header" href="estatevintage.html">Estate & Vintage</a>
               </div>
             </div>
           </div>
 
           <div class="column">
             <div class="ui card">
-              <div class="image">
+              <a class="image" href="local.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
+              </a>
               <div class="content">
-                <a class="header" href="local.html">LOCAL ARTISTS</a>
+                <a class="header" href="local.html">Local Artists</a>
               </div>
             </div>
           </div>
 
           <div class="column">
             <div class="ui card">
-              <div class="image">
+              <a class="image" href="worldwide.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
+              </a>
               <div class="content">
-                <a class="header" href="worldwide.html">WORLDWIDE ARTISTS</a>
+                <a class="header" href="worldwide.html">Worldwide Artists</a>
               </div>
             </div>
           </div>
 
           <div class="column">
             <div class="ui card">
-              <div class="image">
+              <a class="image" href="earrings.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
+              </a>
               <div class="content">
-                <a class="header" href="earrings.html">EARRINGS</a>
+                <a class="header" href="earrings.html">Earrings</a>
               </div>
             </div>
           </div>
@@ -157,22 +157,22 @@
           <!-- Row 2 -->
           <div class="column">
             <div class="ui card">
-              <div class="image">
+              <a class="image" href="favorites.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
+              </a>
               <div class="content">
-                <a class="header" href="favorites.html">LINDA'S FAVORITES</a>
+                <a class="header" href="favorites.html">Linda's Favorites</a>
               </div>
             </div>
           </div>
 
           <div class="column">
             <div class="ui card">
-              <div class="image">
+              <a class="image" href="bracelets.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
+              </a>
               <div class="content">
-                <a class="header" href="bracelets.html">BRACELETS</a>
+                <a class="header" href="bracelets.html">Bracelets</a>
               </div>
             </div>
           </div>
@@ -180,33 +180,33 @@
           <!-- Row 3 -->
           <div class="column">
             <div class="ui card">
-              <div class="image">
+              <a class="image" href="scarves.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
+              </a>
               <div class="content">
-                <a class="header" href="scarves.html">SCARVES</a>
+                <a class="header" href="scarves.html">Scarves</a>
               </div>
             </div>
           </div>
 
           <div class="column">
             <div class="ui card">
-              <div class="image">
+              <a class="image" href="necklaces.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
+              </a>
               <div class="content">
-                <a class="header" href="necklaces.html">NECKLACES & PENDANTS</a>
+                <a class="header" href="necklaces.html">Necklaces & Pendants</a>
               </div>
             </div>
           </div>
 
           <div class="column">
             <div class="ui card">
-              <div class="ui image">
+              <a class="ui image" href-"deals.html">
                 <img src="images/favorites/1-thumb.png">
-              </div>
+              </a>
               <div class="content">
-                <a class="header" href="deals.html">DEALS</a>
+                <a class="header" href="deals.html">Deals</a>
               </div>
             </div>
           </div>
