Removed border line

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <h1 class="script">Jewels By The Sea</h1>  
     <a name="products"></a>  
     <div class="ui stackable grid">
-      <div class="eleven wide column border-right">
+      <div class="eleven wide column">
 
         <div class="ui two column grid center aligned">
           <!-- Row 1 -->
