Center icon now links to homepage

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     MENU
   </div> 
   <div id="logo">
-    <img src="images/logo.png" />
+    <a href="index.html"><img src="images/logo.png" /></a>
   </div>
 </header>
 
