--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
     MENU
   </div> 
   <div id="logo">
-    <img src="images/logo.png" />
+    <a href="index.html"><img src="images/logo.png" /></a>
   </div>
 </header>
 
