--- a/faq.html
+++ b/faq.html
@@ -72,7 +72,7 @@
     MENU
   </div> 
   <div id="logo">
-    <img src="images/logo.png" />
+    <a href="index.html"><img src="images/logo.png" /></a>
   </div>
 </header>
 
