--- a/worldwide.html
+++ b/worldwide.html
@@ -82,7 +82,7 @@
     MENU
   </div>
   <div id="logo">
-    <img src="images/logo.png" />
+    <a href="index.html"><img src="images/logo.png" /></a>
   </div>
   <div id="toggle-view">
     <i class="list layout icon"></i> VIEW
