Small change to visit title

--- a/visit.html
+++ b/visit.html
@@ -85,7 +85,7 @@
     <div class="ui stackable grid">
 
       <div class="ten wide column">
-        <h3 class="script">Store Hours & Location</h3>
+        <h3 class="script">Hours & Location</h3>
 
         <div class="ui two column grid">
           <div class="column right aligned bold-text">
